<resources>
    <string name="app_name">Ebuy</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="keeps_business_going">Keeps Business Going</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="log_in">Log In</string>
    <string name="apply_to_be_seller">Apply to be Seller</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="seller">Seller</string>
    <string name="admin">Admin</string>
    <string name="sign_in">Sign In</string>
    <string name="product_s_name">Product\'s Name</string>
    <string name="product_s_description">Product\'s description</string>
</resources>